--- a/usbmount.conf
+++ b/usbmount.conf
@@ -1,6 +1,6 @@
 ENABLED=1
 MOUNTPOINTS="/home/pi/gcode_files/USB/"          
-FILESYSTEMS="vfat ext2 ext3 ext4 hfsplus"
+FILESYSTEMS="vfat ext2 ext3 ext4 hfsplus fuseblk exfat ntfs"
 MOUNTOPTIONS="sync,noexec,nodev,noatime,nodiratime"
 FS_MOUNTOPTIONS="-fstype=vfat,gid=users,dmask=0007,fmask=0111"
 VERBOSE=no
