--- a/usbmount.conf
+++ b/usbmount.conf
@@ -2,5 +2,5 @@ ENABLED=1
 MOUNTPOINTS="/home/pi/gcode_files/USB/"          
 FILESYSTEMS="vfat ext2 ext3 ext4 hfsplus fuseblk exfat ntfs"
 MOUNTOPTIONS="sync,noexec,nodev,noatime,nodiratime"
-FS_MOUNTOPTIONS="-fstype=vfat,gid=users,dmask=0007,fmask=0117"
+FS_MOUNTOPTIONS="-fstype=vfat,gid=users,dmask=0007,fmask=0117.umask=0000"
 VERBOSE=no
